# bsec-2025

./: .gitignore  README.md  dangerous_roads_analysis.csv  dangerous_roads_analysis.geojson
accidentPredictor/: app.py
accidentPredictor/models/: accident_model.pkl  scaler.pkl  weather_model.pkl
accidentPredictor/templates/: index.html  results.html
analysis/: analyse-xbarto0m.ipynb  analyse-xsikja00.py  analysis_xsikja00.ipynb  analysis_xsikja00.py  data_merge.py  preprocess.ipynb  requirements.txt  weather_data.csv
api/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
api/app/: models.py
api/app/crud/: __init__.py  centroid.py  point.py
api/app/routers/: centroid.py  point.py  user.py
api/app/schemas/: __init__.py
api/app/schemas/centroid/: centroid_response_model.py
api/app/schemas/error/: base_error.py  enum.py
api/app/schemas/point/: point_response_model.py
api/app/schemas/shared/: constants.py  enum.py
api/app/schemas/user/: error.py  user_create.py  user_response_model.py  user_update.py
api/app/services/: database.py  middleware.py
db/: Dockerfile  insert.py  load_weather.py  requirements.txt  xd.py
frontend/app/: index.html  package.json
frontend/app/src/: main.js  router.js
frontend/app/src/components/: FilterView.vue  MainView.vue  MapView.vue  PlaceView.vue
